--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!doctype html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewpoint" content="width=device-width, 
+   initial-scale=1">
+  <title></title>
+</head>
+<body></body>
