--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewpoint" content="width=device-width, 
@@ -6,3 +7,4 @@
   <title></title>
 </head>
 <body></body>
+</html>
